--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -4,3 +4,5 @@
 @import "./styles/Header.scss";
 @import "./styles/Profile.scss";
 @import "./styles/global.scss";
+@import "custom";
+@import "~bootstrap/scss/bootstrap";
