css for chatroom and join page applied, broken chat function easy to reverse

--- a/client/src/components/Input/Input.css
+++ b/client/src/components/Input/Input.css
@@ -19,8 +19,8 @@ input:focus, textarea:focus, select:focus{
   color: #fff !important;
   text-transform: uppercase;
   text-decoration: none;
-  background: #2979FF;
-  padding: 20px;
+  background: #c6c8ff;
+  padding: 10px;
   display: inline-block;
   border: none;
   width: 20%;
