--- a/client/src/components/InfoBar/InfoBar.css
+++ b/client/src/components/InfoBar/InfoBar.css
@@ -15,7 +15,7 @@
   margin-left: 0.2%;
   margin-top: 0.2%;
   color: white;
-  background-color: black;
+  background-color: rgb(247, 237, 237);
 }
 
 .rightInnerContainer {
