--- a/client/src/components/DirectMessagesComp/DirectMessagesComp.css
+++ b/client/src/components/DirectMessagesComp/DirectMessagesComp.css
@@ -8,6 +8,7 @@
   /* width: 100%;
   height: 100%; */
   background: linear-gradient(to bottom, #568df1 0%, #201b46 100%);
+  over-flow: hidden;
 }
 
 html {
@@ -137,8 +138,9 @@ html body {
   justify-content: space-between;
   background: rgba(255, 255, 255, 0.2);
   border-radius: 8px;
-  height: 60%;
+  height: auto;
   width: 35%;
+  z-index: 9999;
 }
 
 @media (min-width: 320px) and (max-width: 480px) {
