--- a/client/src/components/InfoBar/InfoBar.css
+++ b/client/src/components/InfoBar/InfoBar.css
@@ -1,20 +1,21 @@
 .infoBar {
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  background: #2979FF;
+  justify-content: space-evenly;
+  background: #30ff29;
   border-radius: 4px 4px 0 0;
   height: 60px;
   width: 100%;
+
 }
 
 .leftInnerContainer {
   flex: 0.5;
   display: flex;
-  align-items: center;
+  align-items: flex-end;
   margin-left: 0.2%;
   margin-top: 0.2%;
-  color: white;
+  /* color: white; */
   background-color: rgb(247, 237, 237);
 }
 
@@ -23,10 +24,12 @@
   flex: 0.5;
   justify-content: flex-end;
   margin-right: 5%;
-  background-color: rgb(10, 131, 245);
-
+  background-color: rgb(142, 207, 253);
+  align-items: flex-start;
 }
+ 
 
-.onlineIcon {
+
+/* .onlineIcon {
   margin-right: 5%;
-}
+} */
