--- a/client/src/components/Profile.css
+++ b/client/src/components/Profile.css
@@ -1,12 +1,12 @@
 .user--posts {
   display: flex;
   justify-content: space-evenly;
-  align-items: center;
+  align-items: flex-start;
   border-style: inset;
 }
 
-.td-sub-footer-container {
+/* .td-sub-footer-container {
 padding-top: 12px;
 justify-content: space-evenly;
 color: crimson;
-}
+} */
