--- a/client/src/components/Home.css
+++ b/client/src/components/Home.css
@@ -78,17 +78,35 @@
 
 .comment {
   width: 100%;
-  border: 5px solid black;
+  font-size: 13px;;
+  /* border: 5px solid black; */
+  /* border-radius: 25px; */
+  padding-top: 4px;
+  padding-left: 0px;
+  align-content: stretch;
+  align-items: stretch;
 }
 
 .comment-content {
-  border: 4px solid green;
+  /* border: 4px solid green; */
+  padding-left: 0px;
+  padding-right: 0px;
+  padding-bottom: 0px;
+  height: 100%;;
+  width: 100%;
+  display: flex;
+  align-items: top;
+  justify-content: space-between;
+ 
 }
 
 .comment-follower {
-  border: 4px solid salmon;
+  /* border: 4px solid salmon; */
   display: flex;
-  
+  padding-bottom: 0;
+  width: 100%;
+  /* display: flex; */
+
 }
 
 .comment-follower-profile-pic {
@@ -97,12 +115,35 @@
   padding: 0;
   object-fit: cover;
   border-radius: 50%;
- 
 }
 
 .comment-follower-username {
-  border: 4px solid greenyellow
+  /* border: 4px solid greenyellow; */
+  font-size: 13px;
+  text-align: left;
+  padding-left: 0px ;
+  margin-top: 0px;
 
+}
+
+.comment-created {
+  font-size: 9px;
+  height: 18px;
+  /* border: 4px solid blue; */
+}
+
+.button-delete-comment-container {
+  /* border: 3px solid lightpink; */
+  padding-left: 0px;
+  padding-right: 0px;
+ 
+}
+
+.button-delete-comment {
+  background-color: white;
+  border: none;
+  font-size: 15px;
+  
 }
 
 @media (min-width: 320px) and (max-width: 480px) {
