--- a/client/src/components/Home.css
+++ b/client/src/components/Home.css
@@ -4,8 +4,8 @@
 }
 
 .post {
-  width: 90%;
-  max-width: 1000px;
+  width: 50%;
+  /* max-width: 1000px; */
   margin: 50px auto 0;
   padding-top: 30px;
   border: 1px solid #ded9d9;
@@ -44,12 +44,16 @@
 .post-content {
   width: 100%;
   padding: 5px;
+  display: flex;
+  justify-content: center;
 }
 
 .post-image {
   width: 100%;
-  height: 400px;
+  max-width: 600px;
+  height: 600px;
   object-fit: cover;
+  object-position: center;
 }
 
 .reaction-container {
