--- a/client/src/components/Profile.css
+++ b/client/src/components/Profile.css
@@ -1,10 +1,45 @@
 .user--posts {
   display: flex;
-  justify-content: space-evenly;
-  align-items: flex-start;
+  /* justify-content: space-evenly; */
+  /* align-items: flex-start; */
+  margin-left: 15.0%;
   border-style: inset;
 }
 
+.post-box {
+  display: flex;
+  flex-direction: column;
+  border-style: solid;
+  border-color: grey;
+  height: 100%;
+  width: 100%;
+  margin-left: 5%;
+}
+
+.post-box-below {
+  display: flex;
+  flex-direction: column;
+  border-style: solid;
+  border-color: grey;
+
+  height: 100%;
+  width: 100%;
+  margin-left: 5%;
+  margin-top: 0.5%;
+
+}
+
+span.created{
+  display: flex;
+  background-color: pink;
+  height: 100%;
+  width: 100%;
+}
+/* p.descrip {
+  display:flex;
+  border-style: solid;
+  background-color: rgb(228, 240, 240);
+} */
 /* .td-sub-footer-container {
 padding-top: 12px;
 justify-content: space-evenly;
