--- a/client/src/components/Profile.css
+++ b/client/src/components/Profile.css
@@ -11,9 +11,9 @@
   flex-direction: column;
   border-style: solid;
   border-color: grey;
-  height: 100%;
-  width: 100%;
-  margin-left: 5%;
+  height: 300%;
+  width: 115%;
+  margin-left: 6%;
 }
 
 .post-box-below {
@@ -21,11 +21,10 @@
   flex-direction: column;
   border-style: solid;
   border-color: grey;
-
-  height: 100%;
-  width: 100%;
-  margin-left: 5%;
-  margin-top: 0.5%;
+  height: 60%;
+  width: 115%;
+  margin: 2% 6% 5% 6%;
+  /* margin-top: 2%; */
 
 }
 
