--- a/client/src/styles/_Profile.scss
+++ b/client/src/styles/_Profile.scss
@@ -24,6 +24,8 @@
       border-radius: 50%;
       border: 1px solid rgba(0, 0, 0, 0.5);
       padding: 1.5px;
+      object-fit: cover;
+
     }
 
     .user--profile-followers {
