--- a/client/src/App.css
+++ b/client/src/App.css
@@ -139,3 +139,73 @@ body {
   overflow-x: hidden;
 }
 /*# sourceMappingURL=App.css.map */
+.heart-btn{
+  /* position: absolute; */
+  top: 30%;
+  left: 30%;
+  transform: translate(-50%,-50%);
+}
+.content{
+  border: 2px solid #eae2e1;
+  padding: 2px  ;
+  border-radius: 5px;
+  display: flex;
+  cursor: pointer;
+}
+
+/* .content.heart-active{
+  border-color: #f9b9c4;
+  background: #fbd0d8;
+} */
+.content .heart{
+  height: 53px;
+  width: 53px;
+  background: url("././icons/img.png") no-repeat;
+  background-position: left;
+  background-size: 2900%;
+  position: absolute;
+  top: 50%;
+  left: 21%;
+  transform: translate(-50%,-50%);
+  margin-left: 3px;
+  margin-right: 4px;
+}
+
+.heart:hover{
+  background-position: right;
+  animation: animate .8s steps(28) 1;
+}
+
+.like{
+  margin-left: 4px;
+  margin-top: 10px;
+  font-size: 15px; 
+  font-family: 'Montserrat', sans-serif;
+  color: grey;
+
+}
+/* .numb:before{
+  content: '12';
+  font-size: 21px;
+  font-weight: 600;
+  font-family: sans-serif;
+  color: #9C9496;
+  margin-left: 7px;
+} */
+
+.numb.heart-active:before{
+  content: '13';
+  color: #000;
+}
+.like.heart-active{
+  color: #000;
+}
+
+@keyframes animate {
+  0%{
+    background-position: left;
+  }
+  100%{
+    background-position: right;
+  }
+}
