--- a/client/src/components/Messages/Message.css
+++ b/client/src/components/Messages/Message.css
@@ -30,7 +30,7 @@
   display: flex;
   align-items: center;
   font-family: Helvetica;
-  color: #828282;
+  color: snow;
   letter-spacing: 0.3px;
 }
 
