--- a/client/src/components/DirectMessagesComp/DirectMessagesComp.css
+++ b/client/src/components/DirectMessagesComp/DirectMessagesComp.css
@@ -20,7 +20,7 @@ html body {
   margin: 0;
 }
 
-/* .container {
+/* something.container {
   display: block;
   position: relative;
   width: 100%;
