--- a/client/src/App.css
+++ b/client/src/App.css
@@ -153,10 +153,10 @@ body {
   cursor: pointer;
 }
 
-/* .content.heart-active{
+.content.heart-active{
   border-color: #f9b9c4;
   background: #fbd0d8;
-} */
+}
 .content .heart{
   height: 53px;
   width: 53px;
@@ -193,13 +193,13 @@ body {
   margin-left: 7px;
 } */
 
-.numb.heart-active:before{
+/* .numb.heart-active:before{
   content: '13';
   color: #000;
 }
 .like.heart-active{
   color: #000;
-}
+} */
 
 @keyframes animate {
   0%{
