add more css to home page and fix trash and fav button

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -5,4 +5,6 @@
 @import "./styles/Profile.scss";
 @import "./styles/global.scss";
 @import "~bootstrap/scss/bootstrap";
+@import "./styles/favourites";
+@import "./styles/comment";
 // @import "custom";
