--- a/client/src/styles/_global.scss
+++ b/client/src/styles/_global.scss
@@ -7,3 +7,14 @@
 body {
   overflow-x: hidden;
 }
+
+.trash--button {
+  background-color: transparent;
+  outline: none;
+  border: none;
+  // padding: 0;
+
+  // i {
+  //   padding: 0;
+  // }
+}
