--- a/client/src/components/pages/CreatePost.css
+++ b/client/src/components/pages/CreatePost.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap');
+
+
+
 .create-post-box {
   /* border: 4px solid red; */
   width: 100%;
@@ -8,7 +12,9 @@
 }
 
 .create-post-select-image {
-  /* border: 4px solid black; */
+  border: 4px;
+  border-style: inset;
+  
 }
 
 input[type="file"] {
@@ -17,19 +23,59 @@ input[type="file"] {
 
 }
 .create-post-textbox-container {
-  /* border: 4px solid rgb(32, 74, 128); */
+  /* border: 4px solid lightgreen; */
   width: 450px;
-  height: 100%;
- 
+  height: 450px;
+  /* padding-top: 100px; */
+  
 }
 
-input[type="text"] {
-  width: 400px;
+/* input[type="text"] {
+  width: 100%;
   height: 230px;
+  padding-top: 100px;
+} */
+textarea{
+  width: 100%;
+  height: 270px;;
+  padding-top:100px;
+  /* background-color; */
 }
-
 
 .btn-create-post {
   max-height: 40px;
   max-width: 2000px;
+  /* background-color: lightskyblue; */
+}
+
+.blue-tea {
+  display: flex;
+  justify-content: flex-end;
+  padding-left: 60px;
+  /* border: 4px solid orange; */
+  width: 500px;
+  height: 270px;
+}
+
+img {
+  /* background-color: pink; */
+  height: 100%;
+  animation: animate .8s steps(28) 1;
+}
+/* @keyframes animate {
+  0%{
+    background-position: left;
+  }
+  100%{
+    background-position: right;
+  }
+} */
+
+.share-tea-heading {
+  font-family: 'Gloria Hallelujah', cursive;
+  color: #8d6ca0;
+}
+
+.create-post-backrgound {
+  /* border: 4px solid salmon; */
 }
