--- a/client/src/styles/_Header.scss
+++ b/client/src/styles/_Header.scss
@@ -1,12 +1,8 @@
 header {
   @include underline;
-  
-  
 
   nav {
     @include flex;
-    justify-content: space-between;
-    padding: 10px;
     max-width: 1500px;
     width: 90%;
     margin: 0 auto;
@@ -18,6 +14,7 @@ header {
       @include flex;
       justify-content: space-between;
       list-style-type: none;
+      margin-bottom: 0;
 
       li {
         margin: 0 20px;
