--- a/client/src/components/DirectMessagesComp/DirectMessagesComp.css
+++ b/client/src/components/DirectMessagesComp/DirectMessagesComp.css
@@ -8,7 +8,7 @@
   /* width: 100%;
   height: 100%; */
   background: linear-gradient(to bottom, #568df1 0%, #201b46 100%);
-  over-flow: hidden;
+  /* overflow: hidden; */
 }
 
 html {
@@ -138,9 +138,9 @@ html body {
   justify-content: space-between;
   background: rgba(255, 255, 255, 0.2);
   border-radius: 8px;
-  /* height: 500px; */
   width: 35%;
-  overflow-y:auto;
+  height: 500px;
+  overflow-y:auto; 
   z-index: 9999;
 }
 
