--- a/client/src/components/Input/Input.css
+++ b/client/src/components/Input/Input.css
@@ -1,18 +1,20 @@
-.form {
+form.form-dms {
   display: flex;
   border-top: 2px solid #D3D3D3;
   margin-bottom: 2%;
   margin-top: 2%;
-  
+  position: initial;
+  background-color: rgb(240, 140, 165);
 }
 
 .input {
   border: none;
   border-radius: 0;
   padding: 5%;
-  width: 80%;
+  width: 85%;
   font-size: 1.2em;
-  height: 8%;
+  height: 60px;
+  /* margin-left: 0.1em; */
 }
 
 input:focus, textarea:focus, select:focus{
@@ -27,5 +29,5 @@ input:focus, textarea:focus, select:focus{
   padding: 10px;
   display: inline-block;
   border: none;
-  width: 20%;
+  width: 130px;
 }
