--- a/client/src/components/InfoBar/InfoBar.css
+++ b/client/src/components/InfoBar/InfoBar.css
@@ -6,7 +6,7 @@
   border-radius: 4px 4px 0 0;
   height: 60px;
   width: 100%;
-
+  position: sticky;
 }
 
 .leftInnerContainer {
@@ -22,6 +22,7 @@
 .title {
   display: flex;
   color: snow;
+  position: sticky;
 }
 .rightInnerContainer {
   display: flex;
