--- a/client/src/components/Input/Input.css
+++ b/client/src/components/Input/Input.css
@@ -3,7 +3,7 @@ form.form-dms {
   border-top: 2px solid #D3D3D3;
   margin-bottom: 2%;
   margin-top: 2%;
-  position: initial;
+  /* position: initial; */
   background-color: rgb(240, 140, 165);
 }
 
@@ -11,10 +11,11 @@ form.form-dms {
   border: none;
   border-radius: 0;
   padding: 5%;
-  width: 85%;
+  width: 100%;
   font-size: 1.2em;
   height: 60px;
   /* margin-left: 0.1em; */
+  position:relative;
 }
 
 input:focus, textarea:focus, select:focus{
@@ -30,4 +31,5 @@ input:focus, textarea:focus, select:focus{
   display: inline-block;
   border: none;
   width: 130px;
+  position:relative;
 }
