--- a/client/src/styles/_favourites.scss
+++ b/client/src/styles/_favourites.scss
@@ -1,30 +1,34 @@
 .user--favorite-section {
-  @include flex;
-  flex-wrap: wrap;
-  width: 90vw;
-  margin: auto;
+  h1 {
+    text-align: center;
+  }
+  .user--favorite-wrapper {
+    @include flex;
+    justify-content: center;
+    flex-wrap: wrap;
 
-  .user--favorite-article {
-    width: 500px;
-    height: 800px;
-    border: 1px solid rgb(187, 186, 186);
-    margin: 20px;
-    padding-top: 10px;
-    position: relative;
+    .user--favorite-article {
+      width: 500px;
+      height: 800px;
+      border: 1px solid rgb(187, 186, 186);
+      margin: 20px;
+      padding-top: 10px;
+      position: relative;
 
-    .user--favorite-image {
-      width: 100%;
-      height: 600px;
-    }
+      .user--favorite-image {
+        width: 100%;
+        height: 600px;
+      }
 
-    .user--favorite-trash-button {
-      position: absolute;
-      bottom: 0px;
-      left: 0px;
-    }
+      .user--favorite-trash-button {
+        position: absolute;
+        bottom: 0px;
+        left: 0px;
+      }
 
-    .user--favorite-desc {
-      padding: 5px;
+      .user--favorite-desc {
+        padding: 5px;
+      }
     }
   }
 }
