--- a/client/src/components/pages/Home.css
+++ b/client/src/components/pages/Home.css
@@ -1,19 +1,20 @@
 .mainContainer {
   padding: 0 50px 5px 10px;
   justify-content: center;
-  text-align: center;
+  /* text-align: center; */
 }
 
 .post {
   width: 80%;
-  max-width: 1000px;
+  max-width: 850px;
   margin: 20px auto 0;
   padding-top: 30px;
-  background: rgba(148, 146, 185, 0.3);
+  background: rgba(174, 172, 212, 0.3);
 }
 
 .info {
-  width: 100%;
+  width: 80%;
+  margin: auto;
   height: 50px;
   display: flex;
   align-items: center;
@@ -57,8 +58,12 @@
   object-position: center;
 }
 
+.post--section {
+  width: 80%;
+  margin: auto;
+}
+
 .reaction-container {
-  width: 75%;
   height: 50px;
   margin: auto;
   display: flex;
