--- a/client/src/components/Input/Input.css
+++ b/client/src/components/Input/Input.css
@@ -3,8 +3,11 @@ form.form-dms {
   border-top: 2px solid #D3D3D3;
   margin-bottom: 2%;
   margin-top: 2%;
-  /* position: initial; */
+  position: absolute;
+  bottom: -30px;
   background-color: rgb(240, 140, 165);
+  width: 95%;
+  bottom: 0px;
 }
 
 .input {
@@ -15,7 +18,7 @@ form.form-dms {
   font-size: 1.2em;
   height: 60px;
   /* margin-left: 0.1em; */
-  position:relative;
+
 }
 
 input:focus, textarea:focus, select:focus{
