--- a/client/src/styles/_global.scss
+++ b/client/src/styles/_global.scss
@@ -14,7 +14,13 @@
     rgba(49, 130, 255, 0.6409429982930672) 100%
   );
   background-repeat: no-repeat;
+  padding: 0;
 }
+
+.App {
+  padding: 0;
+}
+
 .trash--button {
   background-color: transparent;
   outline: none;
