--- a/client/src/components/pages/Explore.css
+++ b/client/src/components/pages/Explore.css
@@ -11,13 +11,12 @@
 .post {
   width: 80%;
   max-width: 1000px;
-  margin: 20px auto 0;
-  padding-top: 30px;
+  margin: 20px auto;
+  padding: 20px;
   background: rgba(148, 146, 185, 0.3);
 }
 
 .info {
-  width: 100%;
   height: 50px;
   display: flex;
   align-items: center;
