--- a/client/src/components/pages/Explore.css
+++ b/client/src/components/pages/Explore.css
@@ -104,11 +104,12 @@
 }
 
 .reaction-container {
-  width: 75%;
+  width: 100px;
   height: 50px;
   /* margin: auto; */
   display: flex;
   align-items: center;
+  justify-content: space-between;
 }
 
 .button-bookmark-icon {
