--- a/client/src/App.css
+++ b/client/src/App.css
@@ -152,7 +152,6 @@ body {
 
 .fa-heart{
   color: black;
-  
 }
 .content{
   border: 2px solid #bdbcc0;
@@ -166,8 +165,8 @@ body {
 
 .liked {
   border-radius: 50%;
-  border-color: rgb(216, 140, 153);
-  background-color: #eb8b9d;
+  border-color: #f9b9c4;
+  background-color: #fbd0d8;
   
 }
 
